pom files updated to support java11